# PeakRDL-chisel

./: README.md  pyproject.toml
src/peakrdl_chisel/: __init__.py  __peakrdl__.py  exporter.py
src/peakrdl_chisel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/peakrdl_chisel/templates/: module.scala.j2
